--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "dependencies": {
         "core-js": "^3.3.2",
         "element-ui": "^2.12.0",
+        "js-cookie": "^2.2.1",
         "lodash": "^4.17.15",
         "node-sass": "^4.13.0",
         "sass-loader": "^8.0.0",
         "vant": "^2.2.13-beta.0",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
-        "vuex": "^3.1.2"
+        "vuex": "^3.1.2",
+        "vuex-persistedstate": "^2.7.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.0.0",
