--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "core-js": "^3.3.2",
+        "dayjs": "^1.8.17",
         "element-ui": "^2.12.0",
         "js-cookie": "^2.2.1",
         "lodash": "^4.17.15",
@@ -16,6 +18,7 @@
         "sass-loader": "^8.0.0",
         "vant": "^2.2.13-beta.0",
         "vue": "^2.6.10",
+        "vue-axios": "^2.1.5",
         "vue-router": "^3.1.3",
         "vuex": "^3.1.2",
         "vuex-persistedstate": "^2.7.0"
